--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     
     <section class="section">
-        <a class="link float--right">
+        <a href = "https://devcareer.io/account/signup" class="link float--right">
             <object type="image/svg+xml" data="./assets/svg/larrow.svg" class="link__svg"></object>
             <p class="link__text">Create your <span class="yellow">DevCareer.io</span> page</p>
         </a>
